feat: add light/dark toggle mode functionality

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -103,3 +103,13 @@ h1 {
     display: none;
   }
 }
+
+/* Dark Mode */
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
