docs: add comments

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -1,7 +1,10 @@
 ---
+
 ---
+
+<!-- hamburger design, can also use an ison instead of coding a line -->
 <div class="hamburger">
-    <span class="line"></span>
-    <span class="line"></span>
-    <span class="line"></span>
-  </div>
+  <span class="line"></span>
+  <span class="line"></span>
+  <span class="line"></span>
+</div>
