--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,5 +6,6 @@ const pageTitle = "Home Page";
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>My awesome homepage subtitle</h2>
+  <!-- Loan client and set messages to be displayed by the Greeting component -->
   <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari"]} />
 </BaseLayout>
