--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -2,6 +2,7 @@
 
 ---
 
+<!-- Theme toggle -->
 <button id="themeToggle">
   <svg width="30px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path
@@ -17,6 +18,7 @@
   </svg>
 </button>
 
+<!-- Style -->
 <style>
   #themeToggle {
     border: 0;
@@ -37,6 +39,8 @@
   }
 </style>
 
+<!-- Set the script as inline -->
+ <!-- Theme toggle functionality -->
 <script is:inline>
   const theme = (() => {
     if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
