--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+/* Global css */
 html {
   background-color: #f1f5f9;
   font-family: sans-serif;
@@ -43,7 +44,6 @@ h1 {
 }
 
 /* nav styles */
-
 .hamburger {
   padding-right: 20px;
   cursor: pointer;
@@ -85,6 +85,7 @@ h1 {
   display: unset;
 }
 
+/* Responsive */
 @media screen and (min-width: 636px) {
   .nav-links {
     margin-left: 5em;
